# Arduino-Pedelec-Controller

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  readme.md
Arduino_ILI9341_LCD/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_ILI9341.cpp  Adafruit_ILI9341.h  Arduino_ILI9341_LCD.ino  BaseComponent.cpp  BaseComponent.h  BaseView.cpp  BaseView.h  Components.cpp  Components.h  DataModel.cpp  DataModel.h  DiagramComponent.cpp  DiagramComponent.h  DisplayController.cpp  DisplayController.h  IconComponent.cpp  IconComponent.h  MainView.cpp  MainView.h  MainViewEdit.cpp  MainViewEdit.h  MenuEntries.cpp  MenuEntries.h  MenuView.cpp  MenuView.h  SeparatorComponent.cpp  SeparatorComponent.h  TextComponent.cpp  TextComponent.h  defines.h  font.h  protocol.h
Arduino_Pedelec_Controller/: Arduino_Pedelec_Controller.ino  BMP085.cpp  BMP085.h  CMakeLists.txt  DSPC01_nano.cpp  DSPC01_nano.h  DallasTemp.cpp  DallasTemp.h  Display_KingMeter.cpp  Display_KingMeter.h  EEPROMAnything.h  HX711.cpp  HX711.h  HX711_readme.txt  LiquidCrystalDogm.cpp  LiquidCrystalDogm.h  MenuSystem.cpp  MenuSystem.h  PCD8544_nano.cpp  PCD8544_nano.h  PID_v1_nano.cpp  PID_v1_nano.h  bluetooth.cpp  bluetooth.h  config.h  display.cpp  display.h  display_backlight.cpp  display_backlight.h  display_bafang.cpp  display_bafang.h  display_kingmeter.cpp  display_kingmeter.h  ds1307.cpp  ds1307.h  globals.h  hrmi_funcs.cpp  hrmi_funcs.h  menu.cpp  menu.h  (+8 more)
Bluetooth_Setup/: Bluetooth_Setup.ino
E_Bike_Nano_1_2/: Display.ino  EEPROMAnything.h  E_Bike_Nano_1_2.ino  PCD8544_nano.cpp  PID_v1_nano.h
Hardware_Test/: CMakeLists.txt  EEPROMAnything.h  Hardware_Test.ino  LiquidCrystalDogm.h  PCD8544_charset.cpp  PCD8544_nano.cpp
cmake/Arduino/System/: PackagePathIndex.cmake
docs/: Doxyfile.in  README_breadboard.md  README_cmake.txt  README_hacking.txt  README_menu.txt  compile_test.py
tools/: code_reformat.sh  compile_test.py
